styling of features, quotes and favourites

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 	<div class="conatiner-fluid navalert-container">
 		<!--alert-->
 		<div class="container-fluid alert-container">
-		<div class="row d-none d-sm-block">
-			<div class="col-12">
-				<div class="site-wide-alert alert alert-warning">
-                <strong>Sale now on!</strong> Sign up for 12 months and get 50% off-
-					Limited time only <a href="/">See here for deatils</a></div>
+			<div class="row d-none d-sm-block">
+				<div class="col-12">
+					<div class="site-wide-alert alert alert-warning">
+						<strong>Sale now on!</strong> Sign up for 12 months and get 50% off-
+						Limited time only <a href="/">See here for deatils</a></div>
+				</div>
 			</div>
 		</div>
-	</div>
 		<!--/alert-->
 
 		<!--navbar-->
@@ -63,15 +63,15 @@
 		</nav>
 	</div>
 	<!--/navbar-->
-	
+
 	<div class="container-fluid callout-container">
-        <!-- Callout -->
+		<!-- Callout -->
 		<div class="opaque-overlay">&nbsp</div>
 		<div class="row">
 			<div class="col-12">
 				<section class="callout jumbotron text-center">
 					<h1 class="jumbotron-header">The finest wines delivered to your doorstep.</h1>
-					<hr class="block-divider">
+					<hr class="block-divider block-divider--purple">
 					<p class="lead">Sign up today to start receiving humanity's finest wines every month.
 						<s>£39.99</s>
 						<span class="d-inline d-sm-none"><br></span>
@@ -85,132 +85,161 @@
 	<!--/callout-->
 
 	<!-- Quotes -->
-	<div class="container quotes-container">
-		<section class="quotes">
-			<div class="row">
-				<div class="col-12 my-5">
-					<h2 class="text-uppercase">Quotes:</h2>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-12 col-md-6 col-lg-4">
-					<div class="media">
-						<div class="d-none d-sm-block">
-							<img src="images/girl-image.png" class="rounded-circle mr-3" height="100" width="100" alt="girl customer image">
-                        </div>
-							<div class="media-body">
-								<blockquote class="blockquote">
-									<p>"I haven't been sober for months! life-changing."</p>
-									<p>- Sarah Jane</p>
-								</blockquote>
-							</div>
-						</div>
+	<div class="container-wrapper">
+		<div class="container quotes-container content-container">
+			<section class="quotes">
+				<div class="row">
+					<div class="col-12 page-header">
+						<h2 class="text-uppercase">Quotes</h2>
+						<hr class="block-divider block-divider--short">
 					</div>
+				</div>
+				<div class="row">
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="media">
 							<div class="d-none d-sm-block">
-								<img src="images/guy-image.png" class="rounded-circle mr-3" height="100" width="100" alt="guy customer image">
+								<img src="images/girl-image.png" class="rounded-circle mr-3" height="100" width="100" alt="girl customer image">
                         </div>
 								<div class="media-body">
 									<blockquote class="blockquote">
-										<p>"I don't even have to think about what I'm drinking- I just pick up a
-											bottle
-											whenever I feel like it and it's always delicious."</p>
-										<p>- Richard B</p>
+										<p>"I haven't been sober for months! life-changing."</p>
+										<p>- Sarah Jane</p>
 									</blockquote>
 								</div>
 							</div>
 						</div>
-
-						<div class="d-none d-lg-block col-lg-4">
+						<div class="col-12 col-md-6 col-lg-4">
 							<div class="media">
-								<img src="images/geek-image.png" class="rounded-circle mr-3" height="100" width="100" alt="geek customer image">
-								<div class="media-body">
-									<blockquote class="blockquote">
-										<p>"It's like Christmas every month!"</p>
-										<p>- Jane Doe</p>
-									</blockquote>
+								<div class="d-none d-sm-block">
+									<img src="images/guy-image.png" class="rounded-circle mr-3" height="100" width="100" alt="guy customer image">
+                        </div>
+									<div class="media-body">
+										<blockquote class="blockquote">
+											<p>"I don't even have to think about what I'm drinking- I just pick up a
+												bottle
+												whenever I feel like it and it's always delicious."</p>
+											<p>- Richard B</p>
+										</blockquote>
+									</div>
+								</div>
+							</div>
+
+							<div class="d-none d-lg-block col-lg-4">
+								<div class="media">
+									<img src="images/geek-image.png" class="rounded-circle mr-3" height="100" width="100" alt="geek customer image">
+									<div class="media-body">
+										<blockquote class="blockquote">
+											<p>"It's like Christmas every month!"</p>
+											<p>- Jane Doe</p>
+										</blockquote>
+									</div>
 								</div>
 							</div>
 						</div>
-					</div>
-		</section>
+			</section>
+		</div>
 	</div>
 	<!----/.quotes-->
 
 	<!-- Features -->
-	<div class="container features-container">
-		<section class="feature">
-			<div class="row">
-				<div class="col-12 my-5">
-					<h2 class="text-uppercase">Features:</h2>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-12 col-md-6 col-lg-4">
-					<div class="feature">
-						<h3><i class="fas fa-gift d-none d-sm-inline"></i> Feature 1
-							<span class="badge badge-success">NEW!</span></h3>
-						<p>Lovely jubbly amazing glorious wines and that. Stuff and things like how good and easy it
-							all
-							is weeeeeeee! Yum Yum wish I had some free wine ;) <br>
-							<button type="button" class="btn btn-light btn-sm">Read More</button></p>
+	<div class="container-wrapper container-wrapper--purple">
+		<div class="container features-container content-container">
+			<section class="feature">
+				<div class="row">
+					<div class="col-12 page-header">
+						<h2 class="text-uppercase">Features</h2>
+						<hr class="block-divider block-divider--short block-divider--white">
 					</div>
 				</div>
-				<div class="col-12 col-md-6 col-lg-4">
-					<div class="feature">
-						<h3><i class="fas fa-credit-card d-none d-sm-inline"></i> Feature 2</h3>
-						<p>Lovely jubbly amazing glorious wines and that. Stuff and things like how good and easy it
-							all
-							is weeeeeeee! Yum Yum wish I had some free wine ;)<br>
-							<button type="button" class="btn btn-light btn-sm">Read More</button></p>
+				<div class="row">
+					<div class="col-12 col-md-6 col-lg-4">
+						<div class="feature">
+							<h3><i class="fas fa-gift d-none d-sm-inline"></i> Feature 1
+								<span class="badge badge-success">NEW!</span></h3>
+							<p>Lovely jubbly amazing glorious wines and that. Stuff and things like how good and easy it
+								all
+								is weeeeeeee! Yum Yum wish I had some free wine ;) <br>
+								<button type="button" class="btn btn-light btn-sm">Read More</button></p>
+						</div>
+					</div>
+					<div class="col-12 col-md-6 col-lg-4">
+						<div class="feature">
+							<h3><i class="fas fa-credit-card d-none d-sm-inline"></i> Feature 2</h3>
+							<p>Lovely jubbly amazing glorious wines and that. Stuff and things like how good and easy it
+								all
+								is weeeeeeee! Yum Yum wish I had some free wine ;)<br>
+								<button type="button" class="btn btn-light btn-sm">Read More</button></p>
+						</div>
+					</div>
+					<div class="col-12 d-md-none d-lg-block col-lg-4">
+						<div class="feature">
+							<h3><i class="fas fa-times-circle d-none d-sm-inline"></i> Feature 3</h3>
+							<p>Lovely jubbly amazing glorious wines and that. Stuff and things like how good and easy it
+								all
+								is weeeeeeee! Yum Yum wish I had some free wine ;)<br>
+								<button type="button" class="btn btn-light btn-sm">Read More</button></p>
+						</div>
 					</div>
 				</div>
-				<div class="col-12 d-md-none d-lg-block col-lg-4">
-					<div class="feature">
-						<h3><i class="fas fa-times-circle d-none d-sm-inline"></i> Feature 3</h3>
-						<p>Lovely jubbly amazing glorious wines and that. Stuff and things like how good and easy it
-							all
-							is weeeeeeee! Yum Yum wish I had some free wine ;)<br>
-							<button type="button" class="btn btn-light btn-sm">Read More</button></p>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!----/.features-->
+			</section>
+			<!----/.features-->
+		</div>
 	</div>
 
 	<!--favourites-->
-	<div class="container favourites-container">
-		<section class="favourites my-5">
-			<h1 class="text-uppercase">Monthly Favourites</h1>
-			<table class="table table-striped table-dark">
-				<thead>
-					<tr>
-						<th scope="col">Name</th>
-						<th scope="col">Origin</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>Sauvignon Blanc</td>
-						<td>New Zealand</td>
-					</tr>
-					<tr>
-						<td>Rioja</td>
-						<td>Spain</td>
-					</tr>
-					<tr>
-						<td>Chateauneuf-du-Pape</td>
-						<td>France</td>
-					</tr>
-					<tr>
-						<td>Shiraz</td>
-						<td>Australia</td>
-					</tr>
-				</tbody>
-			</table>
-		</section>
+	<div class="container-wrapper container-wrapper--bottles">
+		<div class="opaque-overlay">&nbsp</div>
+		<div class="row">
+			<div class="col-12">
+				<div class="container favourites-container content-container">
+					<section class="favourites page-header">
+						<h2 class="text-uppercase">Monthly Favourites</h2>
+						<hr class="block-divider block-divider--short block-divider--purple">
+						<table class="table table-striped table-dark">
+							<thead>
+								<tr>
+									<th scope="col">Name</th>
+									<th scope="col">Origin</th>
+                                    <th scope="col">Colour</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>Sauvignon Blanc</td>
+									<td>New Zealand</td>
+                                    <td>White</td>
+								</tr>
+								<tr>
+									<td>Rioja</td>
+									<td>Spain</td>
+                                    <td>Red</td>
+								</tr>
+								<tr>
+									<td>Chateauneuf-du-Pape</td>
+									<td>France</td>
+                                    <td>Red</td>
+								</tr>
+								<tr>
+									<td>Trebbiano Costano</td>
+									<td>Italy</td>
+                                    <td>White</td>
+								</tr>
+                                <tr>
+									<td>Arien</td>
+									<td>Spain</td>
+                                    <td>White</td>
+								</tr>
+                                <tr>
+									<td>Syrah</td>
+									<td>Australia</td>
+                                    <td>Red</td>
+								</tr>
+							</tbody>
+						</table>
+					</section>
+				</div>
+			</div>
+		</div>
 	</div>
 	<!--/favourites-->
 
