added break between quotes and features

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	</div>
 	<!--/navbar-->
 
-	<div class="container-fluid callout-container">
+	<div class="container-fluid bottle-container callout-container">
 		<!-- Callout -->
 		<div class="opaque-overlay">&nbsp</div>
 		<div class="row">
@@ -141,7 +141,11 @@
 	</div>
 	<!----/.quotes-->
 
-	<!-- Features -->
+<div class="bottle-container bottle-gap">
+<div class="opaque-overlay">&nbsp</div>
+</div>
+	
+    <!-- Features -->
 	<div class="container-wrapper container-wrapper--purple">
 		<div class="container features-container content-container">
 			<section class="feature">
@@ -154,7 +158,7 @@
 				<div class="row">
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="feature">
-							<h3><i class="fas fa-gift d-none d-sm-inline"></i> Feature 1
+							<h3><i class="fas fa-gift d-none d-sm-block"></i> Feature 1
 								<span class="badge badge-success">NEW!</span></h3>
 							<p>Lovely jubbly amazing glorious wines and that. Stuff and things like how good and easy it
 								all
@@ -164,7 +168,7 @@
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="feature">
-							<h3><i class="fas fa-credit-card d-none d-sm-inline"></i> Feature 2</h3>
+							<h3><i class="fas fa-credit-card d-none d-sm-block"></i> Feature 2</h3>
 							<p>Lovely jubbly amazing glorious wines and that. Stuff and things like how good and easy it
 								all
 								is weeeeeeee! Yum Yum wish I had some free wine ;)<br>
@@ -173,7 +177,7 @@
 					</div>
 					<div class="col-12 d-md-none d-lg-block col-lg-4">
 						<div class="feature">
-							<h3><i class="fas fa-times-circle d-none d-sm-inline"></i> Feature 3</h3>
+							<h3><i class="fas fa-times-circle d-none d-sm-block"></i> Feature 3</h3>
 							<p>Lovely jubbly amazing glorious wines and that. Stuff and things like how good and easy it
 								all
 								is weeeeeeee! Yum Yum wish I had some free wine ;)<br>
@@ -187,7 +191,7 @@
 	</div>
 
 	<!--favourites-->
-	<div class="container-wrapper container-wrapper--bottles">
+	<div class="bottle-container">
 		<div class="opaque-overlay">&nbsp</div>
 		<div class="row">
 			<div class="col-12">
