tweaks to buttons, alert hidden

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 <body>
 	<div class="conatiner-fluid navalert-container">
 		<!--alert-->
-		<div class="container-fluid alert-container">
+		<!--<div class="container-fluid alert-container">
 			<div class="row d-none d-sm-block">
 				<div class="col-12">
 					<div class="site-wide-alert alert alert-warning">
 						<strong>Sale now on!</strong> Sign up for 12 months and get 50% off-
-						Limited time only <a href="/">See here for deatils</a></div>
+						Limited time only!    <a href="/">See here for deatils</a></div>
 				</div>
 			</div>
-		</div>
+		</div>-->
 		<!--/alert-->
 
 		<!--navbar-->
@@ -72,11 +72,12 @@
 				<section class="callout jumbotron text-center">
 					<h1 class="jumbotron-header">The finest wines delivered to your doorstep.</h1>
 					<hr class="block-divider block-divider--purple">
-					<p class="lead">Sign up today to start receiving humanity's finest wines every month.
-						<s>£39.99</s>
+					<p class="lead">Sign up today to start receiving humanity's finest wines.
+						<!--<s>£39.99</s>
 						<span class="d-inline d-sm-none"><br></span>
-						<strong><mark>first one is free!</mark></strong></p>
-					<button type="button" class="btn btn-lg btn--cta btn--purple">Sign Up!</button>
+						<strong><mark>first one is free!</mark></strong></p>-->
+                        <br>
+					<button type="button" class="btn btn-lg btn--cta btn--purple btn-purple-main">Sign Up!</button>
 					<p class="text-muted"><small> Customers must be over 18. Please drink responsibly.</small></p>
 				</section>
 			</div>
