--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
 					<p class="lead">Sign up today to start receiving humanity's finest wines.
 						<!--<s>£39.99</s>
 						<span class="d-inline d-sm-none"><br></span>
-						<strong><mark>first one is free!</mark></strong></p>-->
-                        <br>
-					<button type="button" class="btn btn-lg btn--cta btn--purple btn-purple-main">Sign Up!</button>
-					<p class="text-muted"><small> Customers must be over 18. Please drink responsibly.</small></p>
+						<strong><mark>first one is free!</mark></strong>--></p>
+						<br>
+						<button type="button" class="btn btn-lg btn--cta btn--purple">Sign Up!</button>
+						<p class="text-muted"><small> Customers must be over 18. Please drink responsibly.</small></p>
 				</section>
 			</div>
 		</div>
@@ -142,11 +142,11 @@
 	</div>
 	<!----/.quotes-->
 
-<div class="bottle-container bottle-gap">
-<div class="opaque-overlay">&nbsp</div>
-</div>
-	
-    <!-- Features -->
+	<div class="bottle-container bottle-gap">
+		<div class="opaque-overlay">&nbsp</div>
+	</div>
+
+	<!-- Features -->
 	<div class="container-wrapper container-wrapper--purple">
 		<div class="container features-container content-container">
 			<section class="feature">
@@ -205,39 +205,39 @@
 								<tr>
 									<th scope="col">Name</th>
 									<th scope="col">Origin</th>
-                                    <th scope="col">Colour</th>
+									<th scope="col">Colour</th>
 								</tr>
 							</thead>
 							<tbody>
 								<tr>
 									<td>Sauvignon Blanc</td>
 									<td>New Zealand</td>
-                                    <td>White</td>
+									<td>White</td>
 								</tr>
 								<tr>
 									<td>Rioja</td>
 									<td>Spain</td>
-                                    <td>Red</td>
+									<td>Red</td>
 								</tr>
 								<tr>
 									<td>Chateauneuf-du-Pape</td>
 									<td>France</td>
-                                    <td>Red</td>
+									<td>Red</td>
 								</tr>
 								<tr>
 									<td>Trebbiano Costano</td>
 									<td>Italy</td>
-                                    <td>White</td>
+									<td>White</td>
 								</tr>
-                                <tr>
+								<tr>
 									<td>Arien</td>
 									<td>Spain</td>
-                                    <td>White</td>
+									<td>White</td>
 								</tr>
-                                <tr>
+								<tr>
 									<td>Syrah</td>
 									<td>Australia</td>
-                                    <td>Red</td>
+									<td>Red</td>
 								</tr>
 							</tbody>
 						</table>
